--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -129,8 +129,15 @@ a.brand {
 .col-2 {
   flex: 2 1 50rem;
 }
+.min-30{
+  min-width: 30rem;
+}
 img {
   border-radius: 0.5rem;
+}
+img.small{
+  max-width: 5rem;
+  width: 100%;
 }
 img.medium {
   max-width: 29rem;
