--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -174,6 +174,11 @@ img.large {
 .rating span:last-child {
   color: #404040;
 }
+/* Alert */
+
+.loading{
+  display: block !important;
+}
 .success {
   color: #20a020;
 }
