Created Shipping Screen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -129,13 +129,13 @@ a.brand {
 .col-2 {
   flex: 2 1 50rem;
 }
-.min-30{
+.min-30 {
   min-width: 30rem;
 }
 img {
   border-radius: 0.5rem;
 }
-img.small{
+img.small {
   max-width: 5rem;
   width: 100%;
 }
@@ -176,7 +176,7 @@ img.large {
 }
 /* Alert */
 
-.loading{
+.loading {
   display: block !important;
 }
 .success {
@@ -202,26 +202,26 @@ img.large {
 
 /* Form */
 
-.form{
-  max-width:60rem;
+.form {
+  max-width: 60rem;
   margin: 0 auto;
 }
-.form>div{
+.form > div {
   display: flex;
   flex-direction: column;
   margin: 1rem;
 }
-.form label{
+.form label {
   margin: 1rem 0;
-  display:block;
+  display: block;
 }
-.dropdown{
+.dropdown {
   display: inline-block;
   position: relative;
 }
-.dropdown-content{
-  position:absolute;
-  display:none;
+.dropdown-content {
+  position: absolute;
+  display: none;
   right: 0;
   min-width: 12rem;
   padding: 1rem;
@@ -231,6 +231,21 @@ img.large {
   margin-top: 0.4rem;
   border-radius: 0.5rem;
 }
-.dropdown:hover .dropdown-content{
-  display:block;
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/* Checkout Steps */
+
+.checkout-steps > div {
+  border-top: 0.3rem #c0c0c0 solid;
+  color: #c0c0c0;
+  flex: 1;
+  padding: 1rem;
+  font-weight: bold;
+}
+
+.checkout-steps > div.active{
+  border-top-color: #f08000;
+  color: #f08000;;
+
 }
