--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,6 +91,9 @@ button.primary {
 button.block {
   width: 100%;
 }
+button.small {
+  font-size: 1.2rem;
+}
 header a {
   color: #ffffff;
   padding: 1rem;
@@ -197,7 +200,7 @@ img.large {
 }
 .alert-danger {
   color: #a02020;
-  background-color: #ffe0e0e0;
+  background-color: #ffe0e0;
 }
 .alert-success {
   color: #20a020;
@@ -217,7 +220,6 @@ img.large {
 }
 .form label {
   margin: 1rem 0;
-  
 }
 .dropdown {
   display: inline-block;
@@ -248,8 +250,24 @@ img.large {
   font-weight: bold;
 }
 
-.checkout-steps > div.active{
+.checkout-steps > div.active {
   border-top-color: #f08000;
-  color: #f08000;;
-
+  color: #f08000;
+}
+/* Table */
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.table tbody tr:nth-of-type(odd) {
+  background-color: #f4f4f4;
+}
+.table td,
+.table th {
+  text-align: left;
+  border: 0.1rem solid #e4e4e4;
+  padding: 0.5rem;
+}
+.table button {
+  margin: 0 0.2rem;
 }
